[project]
name = "berliner.salon"
version = "0.1.0"
description = "Website des Berliner Salons"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[project.optional-dependencies]
docs = [
    "sphinx",
]

dev = [
    "berliner.salon[docs]",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
